--- a/MidTermPrac/MidtermPrac.ipynb
+++ b/MidTermPrac/MidtermPrac.ipynb
@@ -9,12 +9,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/05/05 21:04:24 WARN Utils: Your hostname, ubuntu resolves to a loopback address: 127.0.1.1; using 192.168.108.128 instead (on interface ens33)\n",
-      "22/05/05 21:04:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/05/07 13:09:08 WARN Utils: Your hostname, ubuntu resolves to a loopback address: 127.0.1.1; using 192.168.108.128 instead (on interface ens33)\n",
+      "22/05/07 13:09:08 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/05/05 21:04:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/05/07 13:09:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -39,48 +39,6 @@
    "metadata": {},
    "source": [
     "### 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 1)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p = min_max_sum_count_map(2)\n",
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 2, 5, 2)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r = reducer(pair1=(2,1), pair2=(3, 1))\n",
-    "r"
    ]
   },
   {
@@ -554,7 +512,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 19"
+    "### 19?"
    ]
   },
   {
@@ -569,10 +527,472 @@
     "    for i in range(len(words)):\n",
     "        emit(words[i], (key, i))\n",
     "\n",
-    "def reducer(key:words[i], (documentNumber, i)):\n",
-    "    for \n",
+    "def reducer(key:word, values: (documentNumber, i)):\n",
+    "    dic = {}\n",
+    "    for element in values:\n",
+    "        if(element[0] not in dic.keys()):\n",
+    "            dic[element[0]] = []\n",
+    "        else:\n",
+    "            dic[element[0]].append(element[1])\n",
+    "    emit(key, [(element: dic[element]) for element in dic.keys()])\n",
+    "'''\n",
+    "'''\n",
+    "#another method\n",
+    "def mapper(key:docNumber, value:doc):\n",
+    "    words = doc.split(' ')\n",
+    "    for i in range(len(words)):\n",
+    "        emit((words[i], key), i)\n",
+    "\n",
+    "def reducer1(key:(word,docNumber), values: indexes):\n",
+    "    emit(word, (docNumber, indexes))\n",
+    "\n",
+    "def reducer2(key: word, values: (docNumber, indexes)):\n",
+    "    emit(word, (docNumber, indexes))\n",
+    "\n",
+    "\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('g1', (2, 6.3999999999999995)), ('g2', (3, 8.5))]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd23 = sc.textFile('23.txt')\n",
+    "#a\n",
+    "#rdd23.count()\n",
+    "#b\n",
+    "rdd23.map(lambda x: x.split(','))\\\n",
+    ".filter(lambda x: x[1]=='1')\\\n",
+    ".map(lambda x: (x[0], (int(x[1]), float(x[2]))))\\\n",
+    ".reduceByKey(lambda a, b: ((a[0]+ b[0]), (a[1] + b[1])))\\\n",
+    ".collect()\\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['g1', '1', '2.3'],\n",
+       " ['g1', '2', '1.5'],\n",
+       " ['g1', '1', '4.1'],\n",
+       " ['g2', '1', '1.3'],\n",
+       " ['g2', '2', '1.8'],\n",
+       " ['g2', '1', '4.3'],\n",
+       " ['g2', '1', '2.9']]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#c\n",
+    "rdd23.map(lambda x: x.split(','))\\\n",
+    ".filter(lambda x: x[1]!='3')\\\n",
+    ".collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#a\n",
+    "'''\n",
+    "(1,1)\n",
+    "(2,2)\n",
+    "(3,1)\n",
+    "(1,3)\n",
+    "(4,4)\n",
+    "(2,1)\n",
+    "(4,2)\n",
+    "(5,5)\n",
+    "'''\n",
+    "\n",
+    "#b\n",
+    "'''\n",
+    "1, (1, 3)\n",
+    "2, (1, 2)\n",
+    "3, (1)\n",
+    "4, (2, 4)\n",
+    "5, (5)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 26?\n",
+    "what is the meaning of 'efficient' in this question?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 42?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('movie10', 3), ('movie16', 5), ('movie4', 2), ('movie18', 3), ('movie8', 3), ('movie1', 2), ('movie11', 5), ('movie15', 2), ('movie6', 7), ('movie2', 5), ('movie13', 4), ('movie14', 3), ('movie7', 5), ('movie12', 8), ('movie3', 2), ('movie20', 4), ('movie9', 4), ('movie5', 5), ('movie19', 5), ('movie17', 1)]\n",
+      "+++++++++++++++++++++++\n",
+      "[('user6', 7), ('user2', 11), ('user8', 8), ('user5', 7), ('user4', 5), ('user1', 6), ('user9', 7), ('user10', 10), ('user3', 8), ('user7', 9)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a data file\n",
+    "'''\n",
+    "with open('42.txt', 'w') as file:\n",
+    "    for i in range(100):\n",
+    "        file.writelines('user' + str(random.randint(1,10)) + ',movie' + str(random.randint(1,20)) + ',' + str(random.randint(1,5)) + '\\n')\n",
+    "'''\n",
+    "\n",
+    "rdd42 = sc.textFile('42.txt')\n",
+    "\n",
+    "# MUST use the provided functions.\n",
+    "# how to use these fuctions in pyspark program\n",
+    "def getUser(record):\n",
+    "    seg = record.split(',')\n",
+    "    return seg[0]\n",
+    "\n",
+    "def getMovie(record):\n",
+    "    return record.split(',')[1]\n",
+    "\n",
+    "def getRating(record):\n",
+    "    return record.split(',')[2]\n",
+    "# a \n",
+    "def generateMovieUsrPairs(record):\n",
+    "    return (getMovie(record), getUser(record))\n",
+    "\n",
+    "def generateUsrMoviePairs(record):\n",
+    "    return (getUser(record), getMovie(record))\n",
+    "# a\n",
+    "print(rdd42.map(generateMovieUsrPairs).groupByKey().mapValues(lambda X: len(set(X))).collect())\n",
+    "print('+++++++++++++++++++++++')\n",
+    "#b\n",
+    "print(rdd42.map(generateUsrMoviePairs).groupByKey().mapValues(lambda X: len(set(X))).collect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 47"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#a\n",
+    "'''\n",
+    "def map(key: alphabet, value: list of numbers):\n",
+    "    emit(key, max(value)) # return key and local maximum\n",
+    "'''\n",
+    "\n",
+    "#b\n",
+    "'''\n",
+    "a, 50\n",
+    "a, 60\n",
+    "b, 50\n",
+    "b, 55\n",
+    "'''\n",
+    "#c\n",
+    "'''\n",
+    "def reduce(key: alphabet, value : list of local maximums):\n",
+    "    emit(key, max(value)) # global maximum\n",
+    "'''\n",
+    "#d\n",
+    "'''\n",
+    "a, (50, 60)\n",
+    "b, (50, 55)\n",
+    "'''\n",
+    "#e\n",
+    "'''\n",
+    "2\n",
+    "'''\n",
+    "\n",
+    "#f\n",
+    "'''\n",
+    "a, 50\n",
+    "b, 55\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['abc', 'xyz']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [\"abc\", \"abc\", \"xyz\", \"xyz\", \"xyz\"]\n",
+    "rdd50 = sc.parallelize(data)\n",
+    "\n",
+    "rdd50.map(lambda x: (x, 1))\\\n",
+    ".reduceByKey(lambda a, b: (a + b))\\\n",
+    ".map(lambda x: x[0]).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 54"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-3, 3, 3, -4, 4, 4]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc(n):\n",
+    "    if n < 0:\n",
+    "        return [n, -n, -n]\n",
+    "    else:\n",
+    "        return []\n",
+    "\n",
+    "\n",
+    "data = [0, 1, 2, -3, -4]\n",
+    "rdd54 = spark.sparkContext.parallelize(data)\n",
+    "\n",
+    "rdd54.flatMap(myfunc).flatMap(myfunc).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 55 ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ndef map(key: <key-as-string>, value: <value-as-int>):\\n\\n'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# is the key duplicated?\n",
+    "'''\n",
+    "def map(key: <key-as-string>, value: <value-as-int>):\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 66"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'a', 'b', 'b', 'b', 'd', 'd', 'x', 'x', 'x', 'y']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [('a', 2), ('b', 3), ('d', 2),('x', 3), ('y', 1)]\n",
+    "rdd66 = sc.parallelize(data)\n",
+    "\n",
+    "def dup(pair):\n",
+    "    return [pair[0] for i in range(pair[1])]\n",
+    "\n",
+    "rdd66.flatMap(dup).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 69?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nE\\n'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "E\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 71 ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 73?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 4)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what does 'efficient' mean?\n",
+    "data = [1, 11, -1, 2, 12, 3, -4, 13, 4, 14]\n",
+    "rdd73 = sc.parallelize(data)\n",
+    "def countOddEven(number):\n",
+    "    if((number >0) and (number % 2 ==0)):\n",
+    "        return (0, 1)\n",
+    "    elif((number > 0) and (number % 2 != 0)):\n",
+    "        return (1, 0)\n",
+    "    else:\n",
+    "        return (0, 0)\n",
+    "\n",
+    "rdd73.map(countOddEven).reduce(lambda x, y: ((x[0] + y[0]), (x[1] + y[1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
