--- a/Module05_mapPartitions/mapPartitions.ipynb
+++ b/Module05_mapPartitions/mapPartitions.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "import random"
+    "import random\n",
+    "import sys"
    ]
   },
   {
@@ -63,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "20"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +82,8 @@
     "#create a spark session\n",
     "spark = SparkSession.builder.appName(\"mapPartitions\").getOrCreate()\n",
     "sc = spark.sparkContext\n",
-    "rddObj = sc.parallelize(int_seq)\n",
+    "#specify number of partitions\n",
+    "rddObj = sc.parallelize(int_seq, numSlices=20)\n",
     "\n",
     "#show number of partitions\n",
     "rddObj.getNumPartitions()"
@@ -89,7 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#have such levels : ALL, DEBUG, ERROR, FATAL, INFO, OFF, TRACE, WARN\n",
+    "sc.setLogLevel(\"Warn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +114,7 @@
        " ('spark.app.name', 'mapPartitions')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +205,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9223372036854775807"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.maxsize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Next we will caculate min max count of each partitions\n",
+    "def min_max_count(partition):\n",
+    "    maxNum = 0\n",
+    "    minNum = sys.maxsize\n",
+    "    count = 0\n",
+    "    for element in partition:\n",
+    "        if(element > maxNum):\n",
+    "            maxNum = element\n",
+    "        if(element < minNum):\n",
+    "            minNum = element\n",
+    "        count +=1\n",
+    "\n",
+    "    return [(maxNum, minNum, count)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapped_rdd = rddObj.mapPartitions(min_max_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(99833, 330, 500),\n",
+       " (99801, 93, 500),\n",
+       " (99982, 20, 500),\n",
+       " (99888, 555, 500),\n",
+       " (99859, 574, 500),\n",
+       " (99785, 204, 500),\n",
+       " (99894, 282, 500),\n",
+       " (99966, 15, 500),\n",
+       " (99733, 1302, 500),\n",
+       " (99913, 100, 500),\n",
+       " (99513, 34, 500),\n",
+       " (99857, 465, 500),\n",
+       " (99924, 274, 500),\n",
+       " (99771, 171, 500),\n",
+       " (99916, 294, 500),\n",
+       " (99399, 57, 500),\n",
+       " (99947, 321, 500),\n",
+       " (99870, 122, 500),\n",
+       " (99977, 287, 500),\n",
+       " (99794, 815, 500)]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapped_rdd.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#use reduce to calculate the min max count of all the partitions\n",
+    "reduced_rdd = mapped_rdd.reduce(lambda a, b: (max(a[0], b[0]), min(a[1], b[1]), a[2] + b[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(99982, 15, 10000)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reduced_rdd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
