--- a/MidTermPrac/MidtermPrac.ipynb
+++ b/MidTermPrac/MidtermPrac.ipynb
@@ -149,7 +149,7 @@
     "def map(key, value):\n",
     "    emit(key, (value, 1))\n",
     "\n",
-    "def reduce(key, value): key->key (value, 1) -> value\n",
+    "def reduce(key, value): key->key (values list, list of 1s) -> value\n",
     "    emit(sum(value[0] / sum(value[1])))\n",
     "'''"
    ]
@@ -857,10 +857,17 @@
     }
    ],
    "source": [
-    "# is the key duplicated?\n",
     "'''\n",
     "def map(key: <key-as-string>, value: <value-as-int>):\n",
+    "    emit(key, value)\n",
     "\n",
+    "\n",
+    "def reduce(key: <key-as-string>, value: list of values with same key):\n",
+    "    value = sorted(value)\n",
+    "    if len(value) % 2==0:\n",
+    "        emit(key, mean(value[int(len(value)/2)], value[int(len(value)/2) + 1]))\n",
+    "    else:\n",
+    "        emit(key, value[int(len(value)/2) + 1])\n",
     "'''"
    ]
   },
